code cleanup and add Github Action linter

--- a/resources/tools/index.html
+++ b/resources/tools/index.html
@@ -14,7 +14,7 @@ noFooterMain: true
 
 <br>
 
-<p>Enabling will make the developer options visible on all pages that use the Github "testing purposes only" banner.</p>
+<p>Enabling will make the developer options visible on all pages that use the GitHub "testing purposes only" banner.</p>
 <ul class="btn-toolbar list-inline" role="toolbar">
     <li class="btn-group">
       <button id="dev_on" class="btn btn-default" type="button"><strong>On</strong></button>
