--- a/resources/tools/jekyll-converter/page-convert-jekyll.html
+++ b/resources/tools/jekyll-converter/page-convert-jekyll.html
@@ -35,7 +35,7 @@ script:
         <p>This bookmarklet works like a bookmark but will launch the <strong>Convert page to GCWeb/Jekyll page tool</strong> for the current page you are viewing.</p>
         <p>To create a bookmarklet for the <strong>Convert page to GCWeb/Jekyll page tool</strong> right-click the following link and select <strong>Add to favorites…</strong> or drag the link to your favorites or favorites bar.</p>
         <ul class="mrgn-tp-md list-unstyled">
-            <li><a href="javascript:(function()%7blocation.href='https://cra-design.github.io/core-prototype/resources/tools/jekyll-converter/page-convert-jekyll.html?uri='+encodeURIComponent(location.href);%7d)();">Convert page to GCWeb/Jekyll page tool</a></li>
+            <li><a id="jekyllCnvrtBmrklt" href="#">Convert page to GCWeb/Jekyll page tool</a></li>
         </ul>
     </details>
 </section>
@@ -140,7 +140,7 @@ script:
             <!-- START Result textarea -->
             <textarea id="sourcetext" name="content" cols="132" autofocus="autofocus" class="form-control input-md mrgn-bttm-md full-width wb-clipboard" aria-labelledby="contentlabel" aria-multiline="true" rows="19"></textarea>
             <br>
-            <button id="githubsave" class="btn btn-default">Save page</button>
+            <button id="githubsave" type="button" class="btn btn-default">Save page</button>
             <br>
             <label for="scripttext" id="scriptlabel" class="control-label h5 mrgn-tp-md"><span class="field-name">Inline <code>&lt;script&gt;</code> tags:</span></label>
             <textarea id="scripttext" name="scripts" cols="132" autofocus="autofocus" class="form-control input-md mrgn-bttm-md full-width wb-clipboard" aria-labelledby="contentlabel" aria-multiline="true" rows="10"></textarea>
@@ -280,6 +280,8 @@ script:
                     }
                 }
             };
+
+        document.getElementById("jekyllCnvrtBmrklt").href = encodeURI("javascript:(function(){location.href=\"https://cra-design.github.io/core-prototype/resources/tools/jekyll-converter/page-convert-jekyll.html?uri=\"+encodeURIComponent(location.href);})();");
 
         if (page_layout !== null && page_layout !== "") {
             document.getElementById("layout").value = decodeURIComponent(page_layout);
