update checkbox wording

--- a/resources/tools/jekyll-converter/page-convert-jekyll.html
+++ b/resources/tools/jekyll-converter/page-convert-jekyll.html
@@ -97,7 +97,7 @@ script:
                         </li>
                         <li class="checkbox mrgn-lft-md">
                             <input id="removeMWSTags" type="checkbox" checked="checked" value="true">
-                            <label for="removeMWSTags">Remove Managed Web Service (MWS) class <code>div</code> tags</label>
+                            <label for="removeMWSTags">Remove all <abbr title="Managed Web Service">MWS</abbr> class <code>div</code> tags</label>
                         </li>
                     </ul>
                 </fieldset>
