change get script wording

--- a/resources/tools/jekyll-converter/page-convert-jekyll.html
+++ b/resources/tools/jekyll-converter/page-convert-jekyll.html
@@ -89,7 +89,7 @@ script:
                         </li>
                         <li class="checkbox mrgn-lft-md">
                             <input id="addScripts" type="checkbox" checked="checked" value="true">
-                            <label for="addScripts">Include all inline <code>&lt;script&gt;</code> tags</label>
+                            <label for="addScripts">Get all inline <code>&lt;script&gt;</code> tags</label>
                         </li>
                         <li class="checkbox mrgn-lft-md">
                             <input id="usePrettier" type="checkbox" checked="checked" value="true">
